--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Ernest Baker | DevOps Engineer"
+description: "A vain attempt to document my professional life"
 
 # Build settings
 markdown: kramdown
@@ -8,22 +8,26 @@ sass:
   sass_dir: _sass
   style: compressed
 
-# Resume settings
+# Set avatar and photo location
 resume_avatar:                  "true"
-resume_name:                    "Lisa M. Simpson"
-resume_title:                   "VP of Global Communications"
+resume_avatar_photo: "https://avatars.githubusercontent.com/u/15437063?v=4" # "assets/images/avatar.jpg"
+
+# Set the resume name and title
+resume_name:                    "Ernest L. Baker"
+resume_title:                   "DevOps Engineer"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "lisasimpson@youremailaddress.com"
+resume_contact_email:           "ernestlbaker@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "555-7334"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
+resume_contact_telephone:       "719.229.7102"
+resume_contact_address:         "Orange City, FL"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
+resume_header_contact_info:     "{{ site.resume_contact_email }} | {{ site.resume_contact_telephone }} | {{ site.resume_contact_address }}"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+
+resume_header_intro: "<p>Welcome to my digital space where I share my adventures in systems engineering, Python automation, and infrastructure design that have helped organizations save countless hours and secure millions in funding. Dive into my portfolio to explore how my unique blend of military experience, technical expertise in virtualization and networking, and passion for 3D printing and homesteading shapes my approach to solving complex IT challenges across industries.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -37,22 +41,22 @@ resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
-resume_section_recognition:     true
-resume_section_links:           true
-resume_section_associations:    true
+# resume_section_recognition:     true
+# resume_section_links:           true
+# resume_section_associations:    true
 # resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_github_url:            "https://github.com/crow50"
+  # resume_twitter_url:           "http://twitter.com/"
+  # resume_dribbble_url:          "https://dribbble.com/"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  resume_linkedin_url:          "https://www.linkedin.com/in/ernestlbaker"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
-  resume_medium_url:            "https://medium.com/@jglovier"
+  resume_website_url:           "https://ernestbaker.me"
+  # resume_medium_url:            "https://medium.com/"
 resume_print_social_links:      true
 
 # Design settings
