--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,87 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+# Software and Systems Analyst III (Metering and Applications Team)
+- company: Duquesne Light Company, Information Technology
+  position: Software and Systems Analyst III (Metering and Applications Team)
+  duration: November 2021 to Present
+  summary: |
+    * Led data retrieval efforts by performing comprehensive data analysis and engaging in strategic collaborations with vendors, resulting in securing over $19.7 million in Department of Energy grants for Grid Modernization Projects.
+    * Collaborated with Faster support to identify and resolve part ordering issues, enhancing data integrity and improving operational efficiency within the Faster database.
+    * Developed Python scripts to automate processes within the Outage Management System, reducing manual effort by up to four hours daily and ensuring project timelines were met.
+    * Performed thorough audits of internal documentation and monitoring systems to ensure accuracy, reliability, and compliance with IT governance standards.
+    * Maintained operational success by stepping into key roles during personnel changes, facilitating smooth transitions and ensuring team objectives were consistently met.
+    * Developed and implemented Single Sign-On (SSO) solutions and robust data retention policies, ensuring cybersecurity and compliance with data continuity requirements.
+    * Collaborated with project teams to analyze requirements, define project scope, and translate business and technical needs into application modules, ensuring successful project outcomes.
+    * Provided ongoing technical support, resolving support issues promptly and ensuring continuous system and application availability, contributing to high user satisfaction.
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+# Systems Analyst (AMI System, Network & Application Administrator / Database & Network Analyst)
+- company: City of Cleveland Department of Public Utilities, Information Technology
+  position: Systems Analyst (AMI System, Network & Application Administrator / Database & Network Analyst)
+  duration: July 2018 to May 2021
+  summary: |
+    * Analyzed and correlated Key Performance Indicators (KPI) data using Microsoft SQL Server and Field Deployment Manager (FDM), identifying underperforming areas and non-normalized endpoints, ensuring timely and accurate meter reads that contributed to $300 million in yearly revenue.
+    * Ensured continuous performance of 287 Automated Meter Reading (AMR) gathering sites using Ethernet and Cellular protocols, maintaining 98% read rate and network reliability.
+    * Verified completion of contractual work and processed payments for contracts valued at $250,000, conducting thorough reviews to ensure compliance and fiscal responsibility.
+    * Analyzed and streamlined daily operational processes by automating reports, file transfers, and archiving tasks with Python, saving five hours per week while maintaining accuracy.
+    * Provided advanced business support and critical infrastructure support to Department of Public Utilities and Cleveland Water Department users, ensuring seamless operation of essential services and high user satisfaction.
+    * Administered and supported production and test environments for Windows and Linux servers, ensuring system stability and optimal performance.
+    * Managed and supported the Itron 900 MHz Fixed Network 100, ensuring network met Key Performance Indicators (KPI) and delivered 98% reliable meter reading services.
+    * Conducted Quality Assurance Testing and User Acceptance Testing (UAT) to validate system functionality and performance, ensuring high standards of software quality.
+    * Collaborated with meter operations to minimize the impact of system outages, exceptions, and inaccurate data, enhancing service reliability and customer satisfaction.
+    * Created and maintained an inventory of system equipment, including servers, field devices, and permanent meter reading equipment, ensuring accurate asset management and tracking.
 
+# Field Engineer
+- company: Itron
+  position: Field Engineer
+  duration: September 2015 to July 2018
+  summary: |
+    * Executed mitigation surveys in areas with weak or no signal to ensure sector acceptance and automated billing certification for Itron OpenWay Advanced Metering Infrastructure, enhancing network reliability.
+    * Utilized tools such as OpenWay Field Pro, 3G Squid, Zigbee radios, and optical probes for field operations, demonstrating expertise in advanced metering technologies.
+    * Conducted investigations of malfunctioning meters and recommended appropriate replacements or installation of alternative technologies, improving system accuracy and customer satisfaction.
+    * Presented mitigation results and findings to customers, effectively communicating technical information and solutions to stakeholders.
+    * Managed inventory and maintenance of testing and safety equipment, ensuring operational readiness and compliance with safety standards.
+    * Performed preventative maintenance on testing and safety equipment, minimizing downtime and maintaining equipment performance.
+    * Conducted fieldwork in remote and challenging environments, often working independently and carrying equipment up to one mile, ensuring timely and accurate completion of tasks.
+    * Diagnosed and troubleshooted various electronic and RF systems, ensuring quick resolution of issues and minimizing service disruptions.
+    * Applied knowledge of RF and propagation theory, TCP/IP, and routing concepts to optimize network performance and reliability.
+    * Maintained strong PC skills, utilizing software such as Excel, Word, and PowerPoint for reporting, data analysis, and presentations, resulting in clear and effective communication of technical information.
 
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+# Quality Assurance Analyst
+- company: Itron
+  position: Quality Assurance Analyst
+  duration: July 2014 to September 2015
+  summary: |
+    * Led quality assurance testing to verify work completion according to original work orders, ensuring adherence to established protocols and maintaining high standards of project execution.
+    * Utilized Itron FDM and FC300 tools for data collection, analysis, and reporting, enhancing the accuracy and efficiency of project management tasks.
+    * Conducted follow-up interactions with customers to confirm satisfaction with installations, addressing any concerns and ensuring a positive customer experience.
+    * Performed comprehensive data analysis using Excel to query completed work types, ensuring accurate contract billing and thorough project wrap-up.
+    * Managed inventory of used and unused supplies across multiple locations in Northeast and Central Ohio, ensuring accurate billing based on work performed and maintaining supply chain efficiency.
+    * Assisted municipalities in Northeast Ohio and Central Illinois with quality assurance testing and verification, contributing to regional project success and consistency.
+    * Collected and validated meter readings for over 500,000 customer accounts, ensuring data accuracy and project completeness for large-scale validation efforts.
+
+# Water Meter Installer
+- company: Scope Services
+  position: Water Meter Installer
+  duration: May 2014 to July 2014
+  summary: |
+    * Conducted the replacement of residential and commercial water meters, ensuring accurate and efficient installation to maintain service quality and regulatory compliance.
+    * Identified and reported hazardous conditions that could impact the safe replacement of water meters, contributing to a safer working environment.
+    * Maintained and operated hand-held technology devices such as GPS, PDAs, and digital cameras for planning and executing daily tasks, ensuring data accuracy and timely completion of assignments.
+    * Interpreted maps and navigated assigned geographic areas using GPS instruments, demonstrating strong directional and organizational skills to complete meter replacements within specified timeframes.
+    * Communicated professionally with customers, addressing their concerns and resolving issues such as meter tampering or unexpected situations on their premises, ensuring high levels of customer satisfaction.
+    * Adhered to corporate policies and procedures, including safety requirements, to complete all work assignments efficiently and safely.
+    * Worked independently with minimal supervision, showing self-motivation and the ability to multitask in a fast-paced environment.
+    * Performed routine physical tasks such as standing, walking, lifting, and stooping while exposed to various weather conditions, demonstrating physical endurance and adaptability.
+    * Trained on and utilized new equipment and procedures to improve work efficiency and effectiveness.
+
+# Specialist E4 – Cannon Crewmember
+- company: United States Army
+  position: Specialist E4 – Cannon Crewmember
+  duration: June 2010 to October 2013
+  summary: |
+    * Operated and maintained field artillery equipment, including howitzers, to support combat operations and mission objectives in diverse environments.
+    * Deployed to Afghanistan, engaging in active combat operations and ensuring artillery support for ground troops, contributing to mission success and troop safety.
+    * Held a SECRET security clearance, maintaining the highest standards of security and confidentiality in handling classified information.
+    * Conducted routine and preventive maintenance on artillery systems and vehicles, ensuring operational readiness and minimizing downtime.
+    * Coordinated with infantry and other support units to synchronize artillery fire, enhancing overall mission effectiveness and operational efficiency.
+    * Trained and supervised junior soldiers, providing mentorship and guidance to improve their technical skills and combat readiness.
+    * Recognized for exemplary service with multiple awards, including the Afghanistan Campaign Medal with 2 Campaign Stars, Army Commendation Medal, NATO Medal, Army Good Conduct Medal, National Defense Service Medal, Global War on Terrorism Service Medal, and Army Service Ribbon.
